# kv-exec-bench

./: .flake8  .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-kv-exec-bench-preprint.md
docs/superpowers/specs/: 2026-06-23-kv-exec-bench-preprint-design.md
kv_exec_bench/: __init__.py  cli.py  datasets.py  runner.py  scorers.py  sweep.py
paper/: main.tex  refs.bib
results/: results.csv
scripts/: make_figures.py
tests/: test_make_figures.py  test_scorers.py  test_scorers_string.py  test_sweep.py
